# project

./: .gitignore  CMakeLists.txt  sobel_mpi.cpp  sobel_opencv.cpp  sobel_upc.c  sobel_upc.h
